external-crates/move/crates/move-compiler/tests/move_check/expansion/constant_invalid_alias_names.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E02010]: invalid name
  ┌─ tests/move_check/expansion/constant_invalid_alias_names.move:8:24
  │
8 │     use 0x42::N::{C as c1, C as _C1, C as Self};
  │                        ^^ Invalid constant alias name 'c1'. Constant alias names must start with 'A'..'Z'

error[E02010]: invalid name
  ┌─ tests/move_check/expansion/constant_invalid_alias_names.move:8:33
  │
8 │     use 0x42::N::{C as c1, C as _C1, C as Self};
  │                                 ^^^ Invalid constant alias name '_C1'. Constant alias names must start with 'A'..'Z'

error[E03011]: invalid use of reserved name
  ┌─ tests/move_check/expansion/constant_invalid_alias_names.move:8:43
  │
8 │     use 0x42::N::{C as c1, C as _C1, C as Self};
  │                                           ^^^^ Invalid constant alias name 'Self'. 'Self' is restricted and cannot be used to name a constant alias
